<resources>
    <string name="app_name">Timetable</string>
    <string name="coach">Teacher/Coach</string>
    <string name="student">Student</string>
    <string name="schoolkid">Schoolkid</string>
    <string name="choose_occupation">Choose your type of activity</string>
    <string name="add_student">Add student</string>
    <string name="all_days">All days</string>
    <string name="stub" translatable="false">STUB</string>
    <string name="edit_student">Edit</string>
    <string name="delete_student">Delete</string>
    <string name="save">Save</string>
    <string name="input_data">Input data</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_time">Enter time</string>
    <string name="name_field_is_empty">Name field is empty</string>
    <string name="time_field_is_empty">Time field is empty</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="options">Options</string>
    <string name="monday_reduction">Mon</string>
    <string name="tuesday_reduction">Tue</string>
    <string name="wednesday_reduction">Wed</string>
    <string name="thursday_reduction">Thu</string>
    <string name="friday_reduction">Fri</string>
    <string name="saturday_reduction">Sat</string>
    <string name="change_role">Change type of activity</string>
    <string name="sort_by_time">Sort by time</string>
    <string name="clear_data">Clear current role data</string>
    <string name="data_cleared">Data cleared</string>
    <string name="enter_couple_title">Enter couple title</string>
    <string name="enter_couple_time">Enter couple time</string>
    <string name="enter_audience_number">Enter audience number</string>
    <string name="couple_title_field_is_empty">Couple title field is empty</string>
    <string name="couple_time_field_is_empty">Couple time field is empty</string>
    <string name="audience_number_field_is_empty">Audience number field is empty</string>
    <string name="enter_lesson_title">Enter lesson title</string>
    <string name="data_cleaning">Data cleaning</string>
    <string name="clearing_question">Are you sure you want delete the data?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="annexe">Annexe</string>
    <string name="distance_couple">Home</string>
    <string name="cancel">Cancel</string>
    <string name="annex_reduction">" Anx"</string>
    <string name="search">Search</string>
    <string name="nothing_found">Nothing found:(</string>
    <string name="enter_teacher_name">Enter teacher name</string>
    <string name="teacher_name_field_is_empty">Teacher name field is empty</string>
    <string name="load_timetable">Load timetable</string>
    <string name="info_dialog_text">Enter the code to load certain timetable (this action will delete the current timetable)</string>
    <string name="code_field_is_empty">Code field is empty</string>
    <string name="wrong_code">Wrong code</string>
    <string name="enter_timetable_code">Enter timetable code</string>
    <string name="not_specified">Not specified</string>
    <string name="teacher_not_specified">Not specified</string>
    <string name="description_if_needed">Enter description if needed</string>
    <string name="no_desc_provided">No description provided</string>
    <string name="timetable_created">Timatable has created</string>
</resources>