<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".coach.CoachAllDays">

    <LinearLayout
        android:id="@+id/mainSeparator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/daysLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@color/black">

            <LinearLayout
                android:id="@+id/daysSeparator"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/mondayHeader"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.15"
                    android:fontFamily="@font/ubuntu_bold"
                    android:gravity="center"
                    android:text="@string/monday_reduction"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tuesdayHeader"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.15"
                    android:fontFamily="@font/ubuntu_bold"
                    android:gravity="center"
                    android:text="@string/tuesday_reduction"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/wednesdayHeader"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.15"
                    android:fontFamily="@font/ubuntu_bold"
                    android:gravity="center"
                    android:text="@string/wednesday_reduction"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/thursdayHeader"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.15"
                    android:fontFamily="@font/ubuntu_bold"
                    android:gravity="center"
                    android:text="@string/thursday_reduction"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/fridayHeader"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.15"
                    android:fontFamily="@font/ubuntu_bold"
                    android:gravity="center"
                    android:text="@string/friday_reduction"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/saturdayFriday"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.15"
                    android:fontFamily="@font/ubuntu_bold"
                    android:gravity="center"
                    android:text="@string/saturday_reduction"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tableLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8">

            <LinearLayout
                android:id="@+id/tableSeparator"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>