<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainHolder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".coach.EditStudentInfoActivity">

    <Button
        android:id="@+id/saveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/ubuntu_bold"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/save"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topHolderLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/editInfoDescTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/ubuntu_bold"
            android:gravity="center"
            android:text="@string/input_data"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="65dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back_arrow_icon" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/editNamePlainTextView"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:fontFamily="@font/ubuntu_bold"
        android:gravity="center"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topHolderLayout" />

    <Button
        android:id="@+id/enterTimeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/ubuntu_bold"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/enter_time"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/editNamePlainTextView"
        app:layout_constraintStart_toStartOf="@+id/editNamePlainTextView"
        app:layout_constraintTop_toBottomOf="@+id/editNamePlainTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>