<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainDialogHolder"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/grey2"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/descWindowHolder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dataCleaningMessage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:fontFamily="@font/ubuntu_bold"
                android:gravity="center"
                android:text="@string/clearing_question"
                android:textColor="@color/grey5"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/crossImageView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                app:srcCompat="@drawable/cross_icon" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonsWindowHolder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8" />

            <TextView
                android:id="@+id/confirmClearingButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:fontFamily="@font/ubuntu_bold"
                android:gravity="center"
                android:text="@string/yes"
                android:textColor="@color/grey5"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/refusalClearingButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="0.2"
                android:fontFamily="@font/ubuntu_bold"
                android:gravity="center"
                android:text="@string/no"
                android:textColor="@color/grey5"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>