<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainHolder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey1">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/grey2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/dayTitleCoupleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:fontFamily="@font/ubuntu_bold"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:text="@string/input_data"
            android:textColor="@color/grey5"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/grey2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/saveText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_bold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/save"
            android:textColor="@color/grey5"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/titleCoachHolder"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/grey2"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout5">

        <EditText
            android:id="@+id/editNamePlainTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="6dp"
            android:backgroundTint="@color/grey2"
            android:ems="10"
            android:fontFamily="@font/ubuntu_bold"
            android:gravity="center"
            android:hint="@string/enter_name"
            android:inputType="textPersonName"
            android:textColor="@color/grey5"
            android:textColorHint="@color/grey5"
            android:textSize="18sp"
            tools:ignore="TouchTargetSizeCheck" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/enterTimeButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/grey2"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/titleCoachHolder"
        app:layout_constraintStart_toStartOf="@+id/titleCoachHolder"
        app:layout_constraintTop_toBottomOf="@+id/titleCoachHolder">

        <TextView
            android:id="@+id/enterTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/ubuntu_bold"
            android:gravity="center"
            android:text="@string/enter_time"
            android:textColor="@color/grey5"
            android:textSize="19sp" />
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>